# A11yWatch

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  PLAN.md  README.md  SPEC.md  docker-compose.yml
backend/: CLAUDE.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7d1b71472011_baseline_schema.py  d831999cc483_unique_violation_fingerprint_per_scan.py
backend/src/a11ywatch/: main.py
backend/src/a11ywatch/alerts/: delivery.py  messages.py  routing.py
backend/src/a11ywatch/api/: alert_channels.py  auth.py  branding.py  deps.py  errors.py  projects.py  scans.py
backend/src/a11ywatch/core/: config.py  db.py  logging.py  metrics.py  security.py  worker_db.py
backend/src/a11ywatch/jobs/: alerts.py  dispatch.py  noop.py  queue.py  retry.py  scan.py
backend/src/a11ywatch/models/: schemas.py  tables.py
backend/src/a11ywatch/scanning/: crawl.py  diff.py  engine.py  fingerprint.py  persist.py  playwright_scanner.py  (+1 more)
backend/tests/: conftest.py  test_alert_channels_api.py  test_alert_collect.py  test_alert_delivery.py  test_alert_form.py  test_alert_messages.py  test_alert_routing.py  test_alerts.py  test_auth.py  test_branding_api.py  test_branding_form.py  test_crawl.py  test_dashboard.py  test_diff.py  test_dispatch.py  test_engine.py  test_fingerprint.py  test_health.py  test_healthcheck.py  test_logging.py  test_metrics.py  test_persist.py  test_phase1_hardening.py  test_project_form.py  test_projects.py  test_reaper.py  test_retry.py  test_scan_alert_wiring.py  test_scans.py  test_scheduler.py  test_trends.py  test_violations_api.py
(+82 files in other folders)
