[project]
name = "a11ywatch-backend"
version = "0.1.0"
description = "A11yWatch — accessibility scan engine, monitoring API, queue/workers, scheduler"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "redis>=5.0",
    "rq>=2.0",
    "apscheduler>=3.10",
    "playwright>=1.48",
    "axe-playwright-python>=0.1.4",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "fakeredis>=2.25",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a11ywatch"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
